--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -3,8 +3,8 @@
 
 //---------------------------------------------------顏色---------//
 // 定義顏色 此顏色可自由變換
-$primaryColor: #0066cc; //主色
-$secondaryColor: #781f79; //輔色
+$primaryColor: #009e96; //主色
+$secondaryColor: #9dd095; //輔色
 $lightColor: #fec003; //點綴
 $linkColor: #0066cc; //連結
 $importantColor: #eb0202; //重要
@@ -40,7 +40,7 @@ $font-size: 1em;
 // 格線系統
 $grid-columns: 12 !default;                //格線欄位數
 $grid-gutter-width: 30px !default;         //左右padding
-$container-max: 1200px !default;           //container最大寬
+$container-max: 1000px !default;           //container最大寬
 
 //mediaquery
 $screen-lg: 1400px !default; 				//電腦
