--- a/sass/hyui.scss
+++ b/sass/hyui.scss
@@ -32,7 +32,7 @@
 @import "sass/modual/_megamenu";				//megamenu
 @import "sass/modual/_fixed_sidebar";			//固定側邊欄
 @import "sass/modual/_footer";					//footer
-@import "sass/modual/_fatfooter";				//fatfooter
+// @import "sass/modual/_fatfooter";				//fatfooter
 // @import "sass/modual/_form";					//表單-麥莉
 @import "sass/modual/_form-beta";				//表單（純flex）
 @import "sass/modual/_table";					//表格
