--- a/sass/sass/modual/_footer.scss
+++ b/sass/sass/modual/_footer.scss
@@ -5,14 +5,14 @@ footer {
     font-size: 0.813em;
     padding: 1em 0;
     .container {
-        @include gutter;
+        // @include gutter;
         >div {
             padding-bottom: 1em;
         }
-        display: flex;
-        @include screen('tablet') {
-            flex-wrap:wrap;
-        }
+        // display: flex;
+        // @include screen('tablet') {
+        //     flex-wrap:wrap;
+        // }
     }
     a {
         text-decoration: none;
@@ -22,24 +22,25 @@ footer {
             color: darken($primaryColor, 10);
         }
     }
-    .footer_logo {
-        flex:0 1 240px;
-    }
-    .footer_info {
-        flex:1 1 auto;
-    }
-    .footer_icon {
-        flex:0 1 200px;
-        @include screen('tablet') {
-           flex:1 1 100%; 
-           text-align: right;
-       }
-   }
+    // .footer_logo {
+    //     flex:0 1 240px;
+    // }
+    // .footer_info {
+    //     flex:1 1 auto;
+    // }
+    // .footer_icon {
+    //     flex:0 1 200px;
+    //     @include screen('tablet') {
+    //        flex:1 1 100%; 
+    //        text-align: right;
+    //     }
+    // }
     // 版權連結
     .footer_link {
         @include li-reset();
         @include clearfix();
         display: flex;
+
         @include screen('mobile') {
             flex-direction: column;
         }
@@ -47,56 +48,54 @@ footer {
             flex:0 1 auto;
             margin: 0px 5px 5px 0px;
             @include screen('mobile') {
-             flex:1 1 100%; 
-         }
-         a {
-            display: block;
-            padding: .5em 1em;
-            background: $primaryColor;
-            color: #FFF;
-            border-radius:4px;
-            text-align: center;
-            transition: all .3s ease-out;
-            &:hover,
-            &:focus {
-                background: darken($primaryColor, 10);
+                flex:1 1 100%; 
+            }
+            a {
+                display: block;
+                padding: .25em 1.25em;
+                background: $primaryColor;
+
+                color: #FFF;
+                border-radius:4px;
+                text-align: center;
+                transition: all .3s ease-out;
+
+                &:hover,
+                &:focus {
+                    background: darken($primaryColor, 10);
+                }
             }
         }
     }
-}
-p {
-    line-height: 1.65em;
-}
-.update,
-.counter {
-    display: inline-block;
-    margin-right: 5px;
-    em {
-        font-style: normal;
-        color: $primaryColor;
-        padding: 0 .5em;
-    }
-}
-.footer_icon {
-    a {
+    p { line-height: 1.65em; }
+    .update,
+    .counter {
         display: inline-block;
-        vertical-align: top;
-        position:relative;
-        &:focus {
-            &:after {
-                content: "";
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                top: 0;
-                left: 0;
-                box-shadow: 0px 0px 0px 1px $aHover inset;
-                z-index: 99;
-            }
+        margin-right: 5px;
+        em {
+            font-style: normal;
+            color: $primaryColor;
+            padding: 0 .5em;
         }
     }
-    img {
-        max-width: 120px;
+    .footer_icon {
+        a {
+            display: inline-block;
+            vertical-align: top;
+            position:relative;
+            &:focus {
+                &:after {
+                    content: "";
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    box-shadow: 0px 0px 0px 1px $aHover inset;
+                    z-index: 99;
+                }
+            }
+        }
+        img { max-width: 120px; }
     }
-}
 }
