--- a/sass/sass/modual/_form-beta.scss
+++ b/sass/sass/modual/_form-beta.scss
@@ -5,7 +5,7 @@ $m-gutter: 4px;           // Flex grid system default margin
     color: $f_color;
     font-size: 1em;
     border: 1px solid $f_border;
-    padding: .5em;
+    padding: .5em 1em;
     background: #fff;
     vertical-align: middle;
     margin: .3em;
@@ -221,7 +221,7 @@ select::-ms-expand {
     font-size: 100%;
     margin: .5em 0;
 
-    // 表單的線 ----------------------- sratt
+    // 表單的線 ----------------------- start
     // border-top: 1px solid #DDD;
     .form_grp {
         border-bottom: 1px dashed #DDD;
@@ -415,7 +415,7 @@ select::-ms-expand {
         // 第一層的 form_title
         .form_title{
             // padding: 18px 0;
-            color: darken($primaryColor, 10);
+            color: #222;
             font-weight: 500;
         }
 
@@ -481,7 +481,7 @@ select::-ms-expand {
         }
 
         *[class^="notice"] {
-            margin: .3em;
+            margin: 0 .3em;
             width: calc(100% - .6em);
         }
 
@@ -520,6 +520,23 @@ select::-ms-expand {
             // 調整標題
             .form_title{
                 color: #008175;
+                font-size: 120%;
+                padding-top: .25em;
+                margin-top: .5em;
+                padding-left: 20px;
+                background: url(../images/icon-arrow-innerpage.svg) 2px 45% no-repeat;
+                background-size: 10px 10px;
+
+                // position: relative;
+                // &:before{
+                //     content: '';
+                //     position: absolute;
+                //     width: 12px;
+                //     height: 3px;
+                //     background: #2e90ac;
+                //     left: 0;
+                //     top: 0;
+                // }
             }
 
             .form_content {
@@ -619,6 +636,9 @@ select::-ms-expand {
     .flex-col-equal-4{
         @extend %flex_set;
         width: 100%;
+        .form_grp {
+            border-bottom: 0;
+        }
     }
 
     .flex-col-equal-1{
@@ -1281,7 +1301,7 @@ select::-ms-expand {
                             width: 1em;
                             height: 1em;
                             border-radius: 50%;
-                            background: #54caff;
+                            // background: #54caff;
                             content: "";
                             left: .6em;
                             top: calc(50% - .5em);
@@ -1303,6 +1323,26 @@ select::-ms-expand {
                 display: inline-flex;
                 align-items: center;
             }
+        }
+    }
+
+    .check_grp{
+        label{
+            input+span{
+                color: darken($primaryColor, 5);
+            }
+
+            +.form_content{
+                max-width: 100%;
+                padding-left: 2.2em;
+                padding-right: 0;
+            }
+        }
+
+        .radio_grp{
+            background: #f0f0f0;
+            padding: 1em .5em;
+            border-radius: 4px;
         }
     }
 
@@ -1410,7 +1450,7 @@ select::-ms-expand {
 // form 全域表單垂直排列
 .form-column{
     .form_title{
-        padding-bottom: 0 !important;
+        padding-bottom: 6px !important;
         margin: 0 .3em;
     }
     .form_title,
@@ -1589,8 +1629,8 @@ input[type="checkbox"],
 input[type="radio"] {
     font-size: 1em;
     margin: .3em;
-    width: 1em;
-    height: 1em;
+    width: 1.35em;
+    height: 1.35em;
     background-color: #f7f6ee;
     border: 2px solid $color-gray;
 }
@@ -1701,7 +1741,7 @@ input[type="file"] {
     // > label{ color: #b70000; font-weight: bold; }
 
     .radio_grp, .check_grp{
-        &.lost{
+        &.error{
             @include box-shadow(0px 0px 0px 2px #b70000);
             margin-top: 2px;
             padding: .25em;
@@ -1710,14 +1750,14 @@ input[type="file"] {
     }
     .this{ color: #b70000; }
 }
-.lost{
+.error{
     @include box-shadow(0px 0px 0px 2px #b70000);
     border: transparent;
 }
 
 // 第二層
 .form_content .form_grp{
-    &.lost{
+    &.error{
         box-shadow: none;
         // 標題
         .form_title, label{
@@ -1731,7 +1771,7 @@ input[type="file"] {
     }
 }
 
-// .lost{
+// .error{
 //     // 標題
 //     .form_title, label{
 //         color: #b70000; font-weight: bold;
@@ -1772,6 +1812,82 @@ img.captcha {
 abbr[title] {
     border-bottom: none;
     text-decoration: none;
+}
+
+// checkswitch
+.checkSwitch_wrap{
+    padding: .75em 0;
+}
+.checkSwitch {
+    // border: 2px solid #aaa;
+    box-sizing: content-box;
+    display: inline-block;
+    cursor: pointer;
+    height: 1.55rem;
+    width: 1.55rem * 1.8;
+    position: relative;
+    input {
+        // position: absolute;
+        // display: none;
+        &:hover, &:focus {
+            cursor: pointer;
+        }
+    }
+    &_switch {
+        position: absolute;
+        top: 0;
+        // width: 100%;
+        // height: 100%;
+        width: 50px;
+        height: 28px;
+        left: 0;
+        border-radius: 10rem;
+        background: $color-gray;
+        box-shadow: 0px 0px 0px 2px $color-gray inset;
+        &:before {
+            content: "";
+            position: absolute;
+            background: #FFF;
+            border-radius: 50%;
+            width: 1rem;
+            height: 1rem;
+            top: .4rem;
+            left: .3rem;
+            z-index: 9;
+            box-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
+            transition: transform 200ms ease, background 200ms;
+        }
+        // &:after {
+        //     position: absolute;
+        //     content: "關閉";
+        //     right: -2.5rem;
+        //     font-size: .938rem;
+        //     color: #888;
+        //     white-space: nowrap;
+        // }
+    }
+    input:checked+&_switch {
+        background: $primaryColor;
+        box-shadow: 0px 0px 0px 2px $primaryColor inset;
+        &:before {
+            transform: translate(150%, 0);
+            box-shadow: none;
+        }
+        // &:after {
+        //     content: "開啟";
+        //     color: $color-green;
+        //     font-weight: bold;
+        // }
+    }
+
+    +span{
+        margin-left: .5em;
+
+        // 清掉
+        padding: 0 !important;
+        border-right: 0 !important;
+        font-weight: normal !important;
+    }
 }
 
 //---------------------------前面有icon的input------------------//
