--- a/sass/sass/modual/_modal.scss
+++ b/sass/sass/modual/_modal.scss
@@ -1,34 +1,96 @@
 // hyui flex 預設 demo
+// .modal {
+//     position: fixed;
+//     display: none;
+//     width: 400px;
+//     height: 300px;
+//     background: #FFF;
+//     z-index: 99999999;
+//     top: 5%;
+//     left: 50%;
+//     margin-left: -200px;
+//     padding: 1em 1em 1em;
+//     box-sizing: border-box;
+//     border-radius:8px;
+//     box-shadow:1px 1px 15px RGBA(0, 0, 0, .5);
+//     animation: scaleUp .5s ease-out;
+//     h2 {
+//         border-bottom: 1px solid $primaryColor;
+//         padding-bottom: .5em;
+//     }
+//     .close {
+//         position: absolute;
+//         top: 5px;
+//         right: 5px;
+//         width: 30px !important;
+//         min-width: auto;
+//         height: 30px;
+//         font-size: 0em;
+//         border: none;
+//         display: block;
+//         padding: 0;
+//         background: url(../images/basic/icon_close.svg) no-repeat center center;
+//         &:hover, &:focus {
+//             cursor: pointer;
+//         }
+//     }
+// }
+
+
+// 領務局
 .modal {
     position: fixed;
     display: none;
-    width: 400px;
-    height: 300px;
+    width: 600px;
+    height: 400px;
     background: #FFF;
     z-index: 99999999;
-    top: 5%;
+    top: 12%;
     left: 50%;
-    margin-left: -200px;
-    padding: 1em 1em 1em;
+    margin-left: -300px;
+    padding: 3em 1.5em 2em;
     box-sizing: border-box;
     border-radius:8px;
     box-shadow:1px 1px 15px RGBA(0, 0, 0, .5);
+    overflow-y: scroll;
     animation: scaleUp .5s ease-out;
     h2 {
         border-bottom: 1px solid $primaryColor;
         padding-bottom: .5em;
+        text-align: center;
+        margin-top: 0;
     }
+
+    .modal_content{
+        .center_box{
+            text-align: center;
+            padding: 1em 0;
+            p{
+                margin: 6px 0;
+                font-weight: bold;
+            }
+            b{
+                font-size: 150%;
+                color: darken($primaryColor, 10);
+                border: 1px solid;
+                padding: .5em 1.5em;
+            }
+        }
+    }
+
     .close {
         position: absolute;
-        top: 5px;
-        right: 5px;
-        width: 30px !important;
+        top: 16px;
+        right: 16px;
+        width: 40px !important;
         min-width: auto;
-        height: 30px;
+        height: 40px;
         font-size: 0em;
         border: none;
         display: block;
         padding: 0;
+        border-radius: 50%;
+        border: 1px solid #ddd;
         background: url(../images/basic/icon_close.svg) no-repeat center center;
         &:hover, &:focus {
             cursor: pointer;
