--- a/sass/hyui.scss
+++ b/sass/hyui.scss
@@ -57,6 +57,8 @@
 @import "page/_sitemap";						//Sitemap
 @import "page/_left_block";						//左欄left_block
 
+@import "page/_personal";						//個人
+
 @import "sass/common/_print";					//列印樣式
 
 
