--- a/sass/sass/modual/_form-beta.scss
+++ b/sass/sass/modual/_form-beta.scss
@@ -400,7 +400,7 @@ select::-ms-expand {
 
             >input[type="text"],
             >input[type="date"] {
-                width: 10em;
+                width: 12em;
 
                 @include screen('xs_mobile') {
                     width: calc(100% - .6em);
@@ -628,52 +628,53 @@ select::-ms-expand {
         }
     }
 
-    // 引用 Flex grid system
-    // 父層設定 - 均分
-    .flex-col-equal-1,
-    .flex-col-equal-2,
-    .flex-col-equal-3,
-    .flex-col-equal-4{
-        @extend %flex_set;
-        width: 100%;
-        .form_grp {
-            border-bottom: 0;
-        }
-    }
+    // // 引用 Flex grid system
+    // // 父層設定 - 均分
+    // .flex-col-equal-1,
+    // .flex-col-equal-2,
+    // .flex-col-equal-3,
+    // .flex-col-equal-4{
+    //     @extend %flex_set;
+    //     width: 100%;
+    //     .form_grp {
+    //         border-bottom: 0;
+    //     }
+    // }
 
-    .flex-col-equal-1{
-        >.form_grp {
-            @include flex-xs-equal(1, 0px);
-            @include flex-sm-equal(1, $m-gutter);
-            @include flex-md-equal(1, $m-gutter);
-            @include flex-lg-equal(1, $m-gutter);
-        }
-    }
+    // .flex-col-equal-1{
+    //     >.form_grp {
+    //         @include flex-xs-equal(1, 0px);
+    //         @include flex-sm-equal(1, $m-gutter);
+    //         @include flex-md-equal(1, $m-gutter);
+    //         @include flex-lg-equal(1, $m-gutter);
+    //     }
+    // }
 
-    .flex-col-equal-2{
-        >.form_grp {
-            @include flex-xs-equal(1, 0px);
-            @include flex-sm-equal(2, $m-gutter);
-            @include flex-md-equal(2, $m-gutter);
-            @include flex-lg-equal(2, $m-gutter);
-        }
-    }
-    .flex-col-equal-3{
-        >.form_grp {
-            @include flex-xs-equal(1, 0px);
-            @include flex-sm-equal(3, $m-gutter);
-            @include flex-md-equal(3, $m-gutter);
-            @include flex-lg-equal(3, $m-gutter);
-        }
-    }
-    .flex-col-equal-4{
-        >.form_grp {
-            @include flex-xs-equal(1, 0px);
-            @include flex-sm-equal(2, $m-gutter);
-            @include flex-md-equal(4, $m-gutter);
-            @include flex-lg-equal(4, $m-gutter);
-        }
-    }
+    // .flex-col-equal-2{
+    //     >.form_grp,
+    //     >.col {
+    //         @include flex-xs-equal(1, 0px);
+    //         @include flex-sm-equal(2, $m-gutter);
+    //         @include flex-md-equal(2, $m-gutter);
+    //         @include flex-lg-equal(2, $m-gutter);
+    //     }
+    // }
+    // .flex-col-equal-3{
+    //     >.form_grp {
+    //         @include flex-xs-equal(1, 0px);
+    //         @include flex-sm-equal(3, $m-gutter);
+    //         @include flex-md-equal(3, $m-gutter);
+    //         @include flex-lg-equal(3, $m-gutter);
+    //     }
+    // }
+    // .flex-col-equal-4{
+    //     >.form_grp {
+    //         @include flex-xs-equal(1, 0px);
+    //         @include flex-sm-equal(2, $m-gutter);
+    //         @include flex-md-equal(4, $m-gutter);
+    //         @include flex-lg-equal(4, $m-gutter);
+    //     }
+    // }
 
 
     .form_col-6-6 {
@@ -1383,6 +1384,56 @@ select::-ms-expand {
     }
 }
 
+// 引用 Flex grid system
+// 父層設定 - 均分
+.flex-col-equal-1,
+.flex-col-equal-2,
+.flex-col-equal-3,
+.flex-col-equal-4{
+    @extend %flex_set;
+    width: 100%;
+    .form_grp {
+        border-bottom: 0;
+    }
+}
+
+.flex-col-equal-1{
+    >.col,
+    >.grp,
+    >.form_grp {
+        @include flex-xs-equal(1, 0px);
+        @include flex-sm-equal(1, $m-gutter);
+        @include flex-md-equal(1, $m-gutter);
+        @include flex-lg-equal(1, $m-gutter);
+    }
+}
+
+.flex-col-equal-2{
+    >.col,
+    >.grp,
+    >.form_grp{
+        @include flex-xs-equal(1, 0px);
+        @include flex-sm-equal(2, $m-gutter);
+        @include flex-md-equal(2, $m-gutter);
+        @include flex-lg-equal(2, $m-gutter);
+    }
+}
+.flex-col-equal-3{
+    >.form_grp {
+        @include flex-xs-equal(1, 0px);
+        @include flex-sm-equal(3, $m-gutter);
+        @include flex-md-equal(3, $m-gutter);
+        @include flex-lg-equal(3, $m-gutter);
+    }
+}
+.flex-col-equal-4{
+    >.form_grp {
+        @include flex-xs-equal(1, 0px);
+        @include flex-sm-equal(2, $m-gutter);
+        @include flex-md-equal(4, $m-gutter);
+        @include flex-lg-equal(4, $m-gutter);
+    }
+}
 
 
 // form 全域行內設定
@@ -1817,6 +1868,11 @@ abbr[title] {
 // checkswitch
 .checkSwitch_wrap{
     padding: .75em 0;
+    .checkSwitch {
+        input[type="checkbox"]:checked{
+            box-shadow: none;
+        }
+    }
 }
 .checkSwitch {
     // border: 2px solid #aaa;
@@ -1851,7 +1907,7 @@ abbr[title] {
             border-radius: 50%;
             width: 1rem;
             height: 1rem;
-            top: .4rem;
+            top: .38rem;
             left: .3rem;
             z-index: 9;
             box-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
